--- a/index.html
+++ b/index.html
@@ -21,51 +21,66 @@
 
 <section class="row min-vh-100 bg-gradient bg-secondary">
 	<div class="col">
-		<h2>Náš příběh</h2>
-	</div>
-	<div class="col">
-		<h2>Náš príbeh</h2>
-	</div>
-
-	<div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false" data-bs-interval="false">
-		<div class="carousel-indicators">
-			<button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" aria-label="Slide 1" class="active" aria-current="true"></button>
-			<button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-			<button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-		</div>
-		<div class="carousel-inner">
-			<div class="carousel-item active">
-				<img src="..." class="d-block w-100" alt="First slide image">
-				<div class="carousel-caption d-none d-md-block">
-					<h5>First slide label</h5>
-					<p>Some representative placeholder content for the first slide.</p>
-				</div>
+		<div class="row">
+			<div class="col">
+				<h2>Náš příběh</h2>
 			</div>
-			<div class="carousel-item">
-				<img src="..." class="d-block w-100" alt="Second slide image">
-				<div class="carousel-caption d-none d-md-block">
-					<h5>Second slide label</h5>
-					<p>Some representative placeholder content for the second slide.</p>
-				</div>
-			</div>
-			<div class="carousel-item">
-				<img src="..." class="d-block w-100" alt="Third slide image">
-				<div class="carousel-caption d-none d-md-block">
-					<h5>Third slide label</h5>
-					<p>Some representative placeholder content for the third slide.</p>
-				</div>
+			<div class="col">
+				<h2>Náš príbeh</h2>
 			</div>
 		</div>
-		<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-			<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-			<span class="visually-hidden">Previous</span>
-		</button>
-		<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-			<span class="carousel-control-next-icon" aria-hidden="true"></span>
-			<span class="visually-hidden">Next</span>
-		</button>
+		<div class="row">
+			<div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false" data-bs-interval="false">
+				<div class="carousel-indicators">
+					<button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" aria-label="Slide 1" class="active" aria-current="true"></button>
+					<button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+					<button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+				</div>
+				<div class="carousel-inner w-100 h-100">
+					<div class="carousel-item w-100 h-100 active">
+						<!-- <img src="..." alt="First slide image"> -->
+						<svg
+							class="bd-placeholder-img bd-placeholder-img-lg d-block w-100"
+							xmlns="http://www.w3.org/2000/svg"
+							role="img"
+							aria-label="Placeholder: First slide"
+							preserveAspectRatio="xMidYMid slice"
+							focusable="false">
+							<title>Placeholder</title>
+							<rect width="100%" height="100%" fill="#555555"></rect>
+							<text x="50%" y="50%" fill="#aaa" dy=".3em">First slide</text>
+						</svg>
+						<div class="carousel-caption">
+							<h5>First slide label</h5>
+							<p>Some representative placeholder content for the first slide.</p>
+						</div>
+					</div>
+					<div class="carousel-item">
+						<img src="..." alt="Second slide image">
+						<div class="carousel-caption">
+							<h5>Second slide label</h5>
+							<p>Some representative placeholder content for the second slide.</p>
+						</div>
+					</div>
+					<div class="carousel-item">
+						<img src="..." alt="Third slide image">
+						<div class="carousel-caption">
+							<h5>Third slide label</h5>
+							<p>Some representative placeholder content for the third slide.</p>
+						</div>
+					</div>
+				</div>
+				<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+					<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+					<span class="visually-hidden">Previous</span>
+				</button>
+				<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+					<span class="carousel-control-next-icon" aria-hidden="true"></span>
+					<span class="visually-hidden">Next</span>
+				</button>
+			</div>
+		</div>
 	</div>
-
 </section>
 
 <section class="row min-vh-100 bg-gradient bg-success">
