--- a/index.html
+++ b/index.html
@@ -3,9 +3,6 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css" rel="stylesheet">
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 	<title>Svadobný web</title>
 	<link rel="stylesheet" type="text/css" href="styles.css">
 	<!--
@@ -13,93 +10,46 @@
 	-->
 </head>
 
-<body class="d-flex flex-column vh-100 container text-center">
+<body>
 
-<section class="row min-vh-100 bg-gradient bg-primary">
+<section>
 	<h1>Katka a Martin</h1>
 </section>
 
-<section class="row min-vh-100 bg-gradient bg-secondary">
-	<div class="col">
-		<div class="row">
-			<div class="col">
-				<h2>Náš příběh</h2>
-			</div>
-			<div class="col">
-				<h2>Náš príbeh</h2>
-			</div>
-		</div>
-		<div class="row">
-			<div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false" data-bs-interval="false">
-				<div class="carousel-indicators">
-					<button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" aria-label="Slide 1" class="active" aria-current="true"></button>
-					<button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-					<button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-				</div>
-				<div class="carousel-inner w-100 h-100">
-					<div class="carousel-item w-100 h-100 active">
-						<!-- <img src="..." alt="First slide image"> -->
-						<svg
-							class="bd-placeholder-img bd-placeholder-img-lg d-block w-100"
-							xmlns="http://www.w3.org/2000/svg"
-							role="img"
-							aria-label="Placeholder: First slide"
-							preserveAspectRatio="xMidYMid slice"
-							focusable="false">
-							<title>Placeholder</title>
-							<rect width="100%" height="100%" fill="#555555"></rect>
-							<text x="50%" y="50%" fill="#aaa" dy=".3em">First slide</text>
-						</svg>
-						<div class="carousel-caption">
-							<h5>First slide label</h5>
-							<p>Some representative placeholder content for the first slide.</p>
-						</div>
-					</div>
-					<div class="carousel-item">
-						<img src="..." alt="Second slide image">
-						<div class="carousel-caption">
-							<h5>Second slide label</h5>
-							<p>Some representative placeholder content for the second slide.</p>
-						</div>
-					</div>
-					<div class="carousel-item">
-						<img src="..." alt="Third slide image">
-						<div class="carousel-caption">
-							<h5>Third slide label</h5>
-							<p>Some representative placeholder content for the third slide.</p>
-						</div>
-					</div>
-				</div>
-				<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-					<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-					<span class="visually-hidden">Previous</span>
-				</button>
-				<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-					<span class="carousel-control-next-icon" aria-hidden="true"></span>
-					<span class="visually-hidden">Next</span>
-				</button>
-			</div>
-		</div>
+<section>
+	<h2>Náš příběh</h2>
+	<div class="gallery-selection">
+	</div>
+	<div class="gallery">
+		<img src="https://www.w3schools.com/w3images/falls2.jpg">
+		<img src="https://www.w3schools.com/w3images/mist.jpg">
+		<img src="https://www.w3schools.com/w3images/mountainskies.jpg">
+		<img src="https://www.w3schools.com/w3images/nature.jpg">
+		<img src="https://www.w3schools.com/w3images/ocean.jpg">
+		<img src="https://www.w3schools.com/w3images/paris.jpg">
+		<img src="https://www.w3schools.com/w3images/rocks.jpg">
+		<img src="https://www.w3schools.com/w3images/underwater.jpg">
+		<img src="https://www.w3schools.com/w3images/wedding.jpg">
 	</div>
 </section>
 
-<section class="row min-vh-100 bg-gradient bg-success">
+<section>
 	<h2>Obrad</h2>
 	<a href="#">Odkaz na mapu</a>
 </section>
 
-<section class="row min-vh-100 bg-gradient bg-danger">
+<section>
 	<h2>Oslava</h2>
 	<a href="#">Odkaz na mapu</a>
 </section>
 
-<section class="row min-vh-100 bg-gradient bg-warning">
+<section>
 	<h2>Informácie k doprave a ubytovaniu</h2>
 	<p>Nejake info</p>
 	<button type="button" class="btn">Na formulár</button>
 </section>
 
-<section class="row min-vh-100 bg-gradient bg-info">
+<section>
 	<h2>Program</h2>
 	<ol>
 		<li>14:00 - obrad</li>
@@ -111,14 +61,22 @@
 	</ol>
 </section>
 
-<section class="row min-vh-100 bg-gradient bg-light">
+<section>
 	<h2>Tipy na darčeky</h2>
 	<p>Nakŕmte prasiatko. :)</p>
 </section>
 
-<section class="row min-vh-100 bg-gradient bg-dark">
+<section>
 	<h2>Svadobné menu</h2>
 	<p>Bude doplnené...</p>
+</section>
+
+<section>
+	<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Fusce aliquam vestibulum ipsum. Vestibulum fermentum tortor id mi. Sed ac dolor sit amet purus malesuada congue. Etiam dui sem, fermentum vitae, sagittis id, malesuada in, quam. Nullam eget nisl. Nullam at arcu a est sollicitudin euismod. Pellentesque pretium lectus id turpis. Phasellus rhoncus. Pellentesque sapien. In enim a arcu imperdiet malesuada. Integer vulputate sem a nibh rutrum consequat. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Aliquam in lorem sit amet leo accumsan lacinia. Etiam commodo dui eget wisi. Nullam sit amet magna in magna gravida vehicula. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nullam sit amet magna in magna gravida vehicula. Maecenas lorem.</p>
+	<p>Proin mattis lacinia justo. Vivamus ac leo pretium faucibus. Aliquam in lorem sit amet leo accumsan lacinia. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos hymenaeos. Sed elit dui, pellentesque a, faucibus vel, interdum nec, diam. Aliquam ornare wisi eu metus. Vestibulum fermentum tortor id mi. Nulla non arcu lacinia neque faucibus fringilla. Proin pede metus, vulputate nec, fermentum fringilla, vehicula vitae, justo. Fusce wisi. Etiam dictum tincidunt diam. Mauris suscipit, ligula sit amet pharetra semper, nibh ante cursus purus, vel sagittis velit mauris vel metus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos hymenaeos. Et harum quidem rerum facilis est et expedita distinctio. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Etiam dictum tincidunt diam. Nam sed tellus id magna elementum tincidunt.</p>
+	<p>Nullam justo enim, consectetuer nec, ullamcorper ac, vestibulum in, elit. Morbi leo mi, nonummy eget tristique non, rhoncus non leo. Nullam rhoncus aliquam metus. Praesent id justo in neque elementum ultrices. Aliquam ornare wisi eu metus. Nullam sapien sem, ornare ac, nonummy non, lobortis a enim. Aliquam ornare wisi eu metus. Vestibulum fermentum tortor id mi. Maecenas sollicitudin. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Praesent dapibus. In enim a arcu imperdiet malesuada. Nulla accumsan, elit sit amet varius semper, nulla mauris mollis quam, tempor suscipit diam nulla vel leo. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Phasellus rhoncus. Nullam rhoncus aliquam metus. Vivamus luctus egestas leo. Quisque tincidunt scelerisque libero. Duis pulvinar. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
+	<p>Maecenas fermentum, sem in pharetra pellentesque, velit turpis volutpat ante, in pharetra metus odio a lectus. In dapibus augue non sapien. Fusce nibh. Nulla quis diam. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Cras elementum. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Nulla pulvinar eleifend sem. Praesent in mauris eu tortor porttitor accumsan. Donec iaculis gravida nulla. Etiam ligula pede, sagittis quis, interdum ultricies, scelerisque eu. Nullam rhoncus aliquam metus. Etiam dui sem, fermentum vitae, sagittis id, malesuada in, quam. Aliquam erat volutpat. Duis ante orci, molestie vitae vehicula venenatis, tincidunt ac pede. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Maecenas lorem. Integer rutrum, orci vestibulum ullamcorper ultricies, lacus quam ultricies odio, vitae placerat pede sem sit amet enim. Nam sed tellus id magna elementum tincidunt. Phasellus rhoncus.</p>
+	<p>Quisque porta. Pellentesque arcu. Fusce wisi. Fusce tellus odio, dapibus id fermentum quis, suscipit id erat. Praesent dapibus. Aenean id metus id velit ullamcorper pulvinar. Pellentesque pretium lectus id turpis. Nullam sit amet magna in magna gravida vehicula. Aliquam erat volutpat. Nulla accumsan, elit sit amet varius semper, nulla mauris mollis quam, tempor suscipit diam nulla vel leo. Nunc auctor. Vivamus porttitor turpis ac leo. Suspendisse nisl. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Nullam at arcu a est sollicitudin euismod. Mauris elementum mauris vitae tortor. Proin mattis lacinia justo.</p>
 </section>
 
 </body>
