--- a/index.html
+++ b/index.html
@@ -35,12 +35,26 @@
 
 <section>
 	<h2>Obrad</h2>
-	<a href="#">Odkaz na mapu</a>
+	<iframe
+		src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3000.3468441189566!2d15.886894676999047!3d50.39749257158214!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x470e87b4607f9ad5%3A0x91204f8b0959ed39!2sHospit%C3%A1l%20Kuks!5e1!3m2!1ssk!2scz!4v1698733723482!5m2!1ssk!2scz"
+		style="border:0;"
+		allowfullscreen=""
+		loading="lazy"
+		referrerpolicy="no-referrer-when-downgrade"
+	>
+	</iframe>
 </section>
 
 <section>
 	<h2>Oslava</h2>
-	<a href="#">Odkaz na mapu</a>
+	<iframe
+		src="https://www.google.com/maps/embed?pb=!1m17!1m11!1m3!1d941.8263130377863!2d15.810408500252773!3d50.37158399924748!2m2!1f0!2f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x470e869fe6df3e4d%3A0xa9813d4b32b346bc!2sFara%20v%20Dubenci!5e1!3m2!1ssk!2scz!4v1698733648717!5m2!1ssk!2scz"
+		style="border:0;"
+		allowfullscreen=""
+		loading="lazy"
+		referrerpolicy="no-referrer-when-downgrade"
+	>
+	</iframe>
 </section>
 
 <section>
