Add logo and bunch of css

--- a/index.html
+++ b/index.html
@@ -12,29 +12,40 @@
 
 <body>
 
-<section>
-	<h1>Katka a Martin</h1>
+<section class="intro-card">
+	<h1>Kateřina & Martin</h1>
 </section>
 
 <section>
 	<h2>Náš příběh</h2>
+	<p>Setkali se 20. 1. 2022 a od té doby jsou šťastni.</p>
 	<div class="gallery-selection">
+		<div id="falls2"><h3>Falls 2</h3><img src="https://www.w3schools.com/w3images/falls2.jpg"></div>
+		<div id="mist"><h3>Mist</h3><img src="https://www.w3schools.com/w3images/mist.jpg"></div>
+		<div id="mountainskies"><h3>Mountain skies</h3><img src="https://www.w3schools.com/w3images/mountainskies.jpg"></div>
+		<div id="nature"><h3>Nature</h3><img src="https://www.w3schools.com/w3images/nature.jpg"></div>
+		<div id="ocean"><h3>Ocean</h3><img src="https://www.w3schools.com/w3images/ocean.jpg"></div>
+		<div id="paris"><h3>Paris</h3><img src="https://www.w3schools.com/w3images/paris.jpg"></div>
+		<div id="rocks"><h3>Rocks</h3><img src="https://www.w3schools.com/w3images/rocks.jpg"></div>
+		<div id="underwater"><h3>Underwater</h3><img src="https://www.w3schools.com/w3images/underwater.jpg"></div>
+		<div id="wedding"><h3>Wedding</h3><img src="https://www.w3schools.com/w3images/wedding.jpg"></div>
 	</div>
 	<div class="gallery">
-		<img src="https://www.w3schools.com/w3images/falls2.jpg">
-		<img src="https://www.w3schools.com/w3images/mist.jpg">
-		<img src="https://www.w3schools.com/w3images/mountainskies.jpg">
-		<img src="https://www.w3schools.com/w3images/nature.jpg">
-		<img src="https://www.w3schools.com/w3images/ocean.jpg">
-		<img src="https://www.w3schools.com/w3images/paris.jpg">
-		<img src="https://www.w3schools.com/w3images/rocks.jpg">
-		<img src="https://www.w3schools.com/w3images/underwater.jpg">
-		<img src="https://www.w3schools.com/w3images/wedding.jpg">
+		<a href="#falls2"><img src="https://www.w3schools.com/w3images/falls2.jpg"></a>
+		<a href="#mist"><img src="https://www.w3schools.com/w3images/mist.jpg"></a>
+		<a href="#mountainskies"><img src="https://www.w3schools.com/w3images/mountainskies.jpg"></a>
+		<a href="#nature"><img src="https://www.w3schools.com/w3images/nature.jpg"></a>
+		<a href="#ocean"><img src="https://www.w3schools.com/w3images/ocean.jpg"></a>
+		<a href="#paris"><img src="https://www.w3schools.com/w3images/paris.jpg"></a>
+		<a href="#rocks"><img src="https://www.w3schools.com/w3images/rocks.jpg"></a>
+		<a href="#underwater"><img src="https://www.w3schools.com/w3images/underwater.jpg"></a>
+		<a href="#wedding"><img src="https://www.w3schools.com/w3images/wedding.jpg"></a>
 	</div>
 </section>
 
 <section>
 	<h2>Obrad</h2>
+	<p>Obrad sa bude konať v Kostele Nejsvětější Trojice Hospitalu Kuks.</p>
 	<iframe
 		src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3000.3468441189566!2d15.886894676999047!3d50.39749257158214!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x470e87b4607f9ad5%3A0x91204f8b0959ed39!2sHospit%C3%A1l%20Kuks!5e1!3m2!1ssk!2scz!4v1698733723482!5m2!1ssk!2scz"
 		style="border:0;"
@@ -46,7 +57,8 @@
 </section>
 
 <section>
-	<h2>Oslava</h2>
+	<h2>Hostina</h2>
+	<p>Hostina sa bude konať na Fare v Dubenci.</p>
 	<iframe
 		src="https://www.google.com/maps/embed?pb=!1m17!1m11!1m3!1d941.8263130377863!2d15.810408500252773!3d50.37158399924748!2m2!1f0!2f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x470e869fe6df3e4d%3A0xa9813d4b32b346bc!2sFara%20v%20Dubenci!5e1!3m2!1ssk!2scz!4v1698733648717!5m2!1ssk!2scz"
 		style="border:0;"
@@ -59,7 +71,9 @@
 
 <section>
 	<h2>Informácie k doprave a ubytovaniu</h2>
-	<p>Nejake info</p>
+	<p>Pokud budete potřebovat pomoc s dopravou na Farmu, obraťte se na nás. Volejte Adéle na tel.: 777 777 777</p>
+	<p>Parkovat můžete přímo v areálu farmy.</p>
+	<p>Ubytování je zajištěno rovněž přímo na Farmě. Dejte nám vědět, že ho využijete  a kolik Vás bude. Přejdětě na formulář nebo ještě nakoukněte na tipy na dárky...</p>
 	<button type="button" class="btn">Na formulár</button>
 </section>
 
@@ -83,14 +97,6 @@
 <section>
 	<h2>Svadobné menu</h2>
 	<p>Bude doplnené...</p>
-</section>
-
-<section>
-	<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Fusce aliquam vestibulum ipsum. Vestibulum fermentum tortor id mi. Sed ac dolor sit amet purus malesuada congue. Etiam dui sem, fermentum vitae, sagittis id, malesuada in, quam. Nullam eget nisl. Nullam at arcu a est sollicitudin euismod. Pellentesque pretium lectus id turpis. Phasellus rhoncus. Pellentesque sapien. In enim a arcu imperdiet malesuada. Integer vulputate sem a nibh rutrum consequat. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Aliquam in lorem sit amet leo accumsan lacinia. Etiam commodo dui eget wisi. Nullam sit amet magna in magna gravida vehicula. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nullam sit amet magna in magna gravida vehicula. Maecenas lorem.</p>
-	<p>Proin mattis lacinia justo. Vivamus ac leo pretium faucibus. Aliquam in lorem sit amet leo accumsan lacinia. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos hymenaeos. Sed elit dui, pellentesque a, faucibus vel, interdum nec, diam. Aliquam ornare wisi eu metus. Vestibulum fermentum tortor id mi. Nulla non arcu lacinia neque faucibus fringilla. Proin pede metus, vulputate nec, fermentum fringilla, vehicula vitae, justo. Fusce wisi. Etiam dictum tincidunt diam. Mauris suscipit, ligula sit amet pharetra semper, nibh ante cursus purus, vel sagittis velit mauris vel metus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos hymenaeos. Et harum quidem rerum facilis est et expedita distinctio. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Etiam dictum tincidunt diam. Nam sed tellus id magna elementum tincidunt.</p>
-	<p>Nullam justo enim, consectetuer nec, ullamcorper ac, vestibulum in, elit. Morbi leo mi, nonummy eget tristique non, rhoncus non leo. Nullam rhoncus aliquam metus. Praesent id justo in neque elementum ultrices. Aliquam ornare wisi eu metus. Nullam sapien sem, ornare ac, nonummy non, lobortis a enim. Aliquam ornare wisi eu metus. Vestibulum fermentum tortor id mi. Maecenas sollicitudin. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Praesent dapibus. In enim a arcu imperdiet malesuada. Nulla accumsan, elit sit amet varius semper, nulla mauris mollis quam, tempor suscipit diam nulla vel leo. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Phasellus rhoncus. Nullam rhoncus aliquam metus. Vivamus luctus egestas leo. Quisque tincidunt scelerisque libero. Duis pulvinar. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
-	<p>Maecenas fermentum, sem in pharetra pellentesque, velit turpis volutpat ante, in pharetra metus odio a lectus. In dapibus augue non sapien. Fusce nibh. Nulla quis diam. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Cras elementum. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Nulla pulvinar eleifend sem. Praesent in mauris eu tortor porttitor accumsan. Donec iaculis gravida nulla. Etiam ligula pede, sagittis quis, interdum ultricies, scelerisque eu. Nullam rhoncus aliquam metus. Etiam dui sem, fermentum vitae, sagittis id, malesuada in, quam. Aliquam erat volutpat. Duis ante orci, molestie vitae vehicula venenatis, tincidunt ac pede. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Maecenas lorem. Integer rutrum, orci vestibulum ullamcorper ultricies, lacus quam ultricies odio, vitae placerat pede sem sit amet enim. Nam sed tellus id magna elementum tincidunt. Phasellus rhoncus.</p>
-	<p>Quisque porta. Pellentesque arcu. Fusce wisi. Fusce tellus odio, dapibus id fermentum quis, suscipit id erat. Praesent dapibus. Aenean id metus id velit ullamcorper pulvinar. Pellentesque pretium lectus id turpis. Nullam sit amet magna in magna gravida vehicula. Aliquam erat volutpat. Nulla accumsan, elit sit amet varius semper, nulla mauris mollis quam, tempor suscipit diam nulla vel leo. Nunc auctor. Vivamus porttitor turpis ac leo. Suspendisse nisl. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Nullam at arcu a est sollicitudin euismod. Mauris elementum mauris vitae tortor. Proin mattis lacinia justo.</p>
 </section>
 
 </body>
