--- a/index.html
+++ b/index.html
@@ -19,25 +19,27 @@
 <section>
 	<h2>Náš příběh</h2>
 	<p>Setkali se 20. 1. 2022 a od té doby jsou šťastni.</p>
+
 	<div class="gallery-selection">
-		<div id="falls2"><h3>Falls 2</h3><img src="https://www.w3schools.com/w3images/falls2.jpg"></div>
-		<div id="mist"><h3>Mist</h3><img src="https://www.w3schools.com/w3images/mist.jpg"></div>
-		<div id="mountainskies"><h3>Mountain skies</h3><img src="https://www.w3schools.com/w3images/mountainskies.jpg"></div>
-		<div id="nature"><h3>Nature</h3><img src="https://www.w3schools.com/w3images/nature.jpg"></div>
-		<div id="ocean"><h3>Ocean</h3><img src="https://www.w3schools.com/w3images/ocean.jpg"></div>
-		<div id="paris"><h3>Paris</h3><img src="https://www.w3schools.com/w3images/paris.jpg"></div>
-		<div id="rocks"><h3>Rocks</h3><img src="https://www.w3schools.com/w3images/rocks.jpg"></div>
-		<div id="underwater"><h3>Underwater</h3><img src="https://www.w3schools.com/w3images/underwater.jpg"></div>
-		<div id="wedding"><h3>Wedding</h3><img src="https://www.w3schools.com/w3images/wedding.jpg"></div>
+		<div id="falls2">       <img src="https://www.w3schools.com/w3images/falls2.jpg">       <div><h3>Falls 2</h3>       <p>Some more text</p></div></div>
+		<div id="mist">         <img src="https://www.w3schools.com/w3images/mist.jpg">         <div><h3>Mist</h3>          <p>Some more text</p></div></div>
+		<div id="rocks">        <img src="https://www.w3schools.com/w3images/rocks.jpg">        <div><h3>Rocks</h3>         <p>Some more text</p></div></div>
+		<div id="mountainskies"><img src="https://www.w3schools.com/w3images/mountainskies.jpg"><div><h3>Mountain skies</h3><p>Some more text</p></div></div>
+		<div id="nature">       <img src="https://www.w3schools.com/w3images/nature.jpg">       <div><h3>Nature</h3>        <p>Some more text</p></div></div>
+		<div id="ocean">        <img src="https://www.w3schools.com/w3images/ocean.jpg">        <div><h3>Ocean</h3>         <p>Some more text</p></div></div>
+		<div id="paris">        <img src="https://www.w3schools.com/w3images/paris.jpg">        <div><h3>Paris</h3>         <p>Some more text</p></div></div>
+		<div id="underwater">   <img src="https://www.w3schools.com/w3images/underwater.jpg">   <div><h3>Underwater</h3>    <p>Some more text</p></div></div>
+		<div id="wedding">      <img src="https://www.w3schools.com/w3images/wedding.jpg">      <div><h3>Wedding</h3>       <p>Some more text</p></div></div>
 	</div>
+
 	<div class="gallery">
 		<a href="#falls2"><img src="https://www.w3schools.com/w3images/falls2.jpg"></a>
 		<a href="#mist"><img src="https://www.w3schools.com/w3images/mist.jpg"></a>
+		<a href="#rocks"><img src="https://www.w3schools.com/w3images/rocks.jpg"></a>
 		<a href="#mountainskies"><img src="https://www.w3schools.com/w3images/mountainskies.jpg"></a>
 		<a href="#nature"><img src="https://www.w3schools.com/w3images/nature.jpg"></a>
 		<a href="#ocean"><img src="https://www.w3schools.com/w3images/ocean.jpg"></a>
 		<a href="#paris"><img src="https://www.w3schools.com/w3images/paris.jpg"></a>
-		<a href="#rocks"><img src="https://www.w3schools.com/w3images/rocks.jpg"></a>
 		<a href="#underwater"><img src="https://www.w3schools.com/w3images/underwater.jpg"></a>
 		<a href="#wedding"><img src="https://www.w3schools.com/w3images/wedding.jpg"></a>
 	</div>
