Switched gallery to lightbox

--- a/index.html
+++ b/index.html
@@ -16,33 +16,113 @@
 	<h1>Kateřina & Martin</h1>
 </section>
 
-<section>
+<section id="story">
 	<h2>Náš příběh</h2>
 	<p>Setkali se 20. 1. 2022 a od té doby jsou šťastni.</p>
 
-	<div class="gallery-selection">
-		<div id="falls2">       <img src="https://www.w3schools.com/w3images/falls2.jpg">       <div><h3>Falls 2</h3>       <p>Some more text</p></div></div>
-		<div id="mist">         <img src="https://www.w3schools.com/w3images/mist.jpg">         <div><h3>Mist</h3>          <p>Some more text</p></div></div>
-		<div id="rocks">        <img src="https://www.w3schools.com/w3images/rocks.jpg">        <div><h3>Rocks</h3>         <p>Some more text</p></div></div>
-		<div id="mountainskies"><img src="https://www.w3schools.com/w3images/mountainskies.jpg"><div><h3>Mountain skies</h3><p>Some more text</p></div></div>
-		<div id="nature">       <img src="https://www.w3schools.com/w3images/nature.jpg">       <div><h3>Nature</h3>        <p>Some more text</p></div></div>
-		<div id="ocean">        <img src="https://www.w3schools.com/w3images/ocean.jpg">        <div><h3>Ocean</h3>         <p>Some more text</p></div></div>
-		<div id="paris">        <img src="https://www.w3schools.com/w3images/paris.jpg">        <div><h3>Paris</h3>         <p>Some more text</p></div></div>
-		<div id="underwater">   <img src="https://www.w3schools.com/w3images/underwater.jpg">   <div><h3>Underwater</h3>    <p>Some more text</p></div></div>
-		<div id="wedding">      <img src="https://www.w3schools.com/w3images/wedding.jpg">      <div><h3>Wedding</h3>       <p>Some more text</p></div></div>
+	<div class="gallery">
+		<!-- <a href="#img-panorama"><img src="media/IMG_20221002_112532.jpg"></a> -->
+		<a href="#img-falls2"><img src="https://www.w3schools.com/w3images/falls2.jpg"></a>
+		<a href="#img-mist"><img src="https://www.w3schools.com/w3images/mist.jpg"></a>
+		<a href="#img-rocks"><img src="https://www.w3schools.com/w3images/rocks.jpg"></a>
+		<a href="#img-mountainskies"><img src="https://www.w3schools.com/w3images/mountainskies.jpg"></a>
+		<a href="#img-nature"><img src="https://www.w3schools.com/w3images/nature.jpg"></a>
+		<a href="#img-ocean"><img src="https://www.w3schools.com/w3images/ocean.jpg"></a>
+		<a href="#img-paris"><img src="https://www.w3schools.com/w3images/paris.jpg"></a>
+		<a href="#img-underwater"><img src="https://www.w3schools.com/w3images/underwater.jpg"></a>
+		<a href="#img-wedding"><img src="https://www.w3schools.com/w3images/wedding.jpg"></a>
 	</div>
 
-	<div class="gallery">
-		<a href="#falls2"><img src="https://www.w3schools.com/w3images/falls2.jpg"></a>
-		<a href="#mist"><img src="https://www.w3schools.com/w3images/mist.jpg"></a>
-		<a href="#rocks"><img src="https://www.w3schools.com/w3images/rocks.jpg"></a>
-		<a href="#mountainskies"><img src="https://www.w3schools.com/w3images/mountainskies.jpg"></a>
-		<a href="#nature"><img src="https://www.w3schools.com/w3images/nature.jpg"></a>
-		<a href="#ocean"><img src="https://www.w3schools.com/w3images/ocean.jpg"></a>
-		<a href="#paris"><img src="https://www.w3schools.com/w3images/paris.jpg"></a>
-		<a href="#underwater"><img src="https://www.w3schools.com/w3images/underwater.jpg"></a>
-		<a href="#wedding"><img src="https://www.w3schools.com/w3images/wedding.jpg"></a>
-	</div>
+<!-- 	<a class="lightbox" href="#story" id="img-panorama">
+		<picture>
+			<img src="media/IMG_20221002_112532.jpg">
+		</picture>
+		<div>
+			<h3>Panorama</h3>
+			<p>One of our trips</p>
+		</div>
+	</a> -->
+	<a class="lightbox" href="#story" id="img-falls2">
+		<picture>
+			<img src="https://www.w3schools.com/w3images/falls2.jpg">
+		</picture>
+		<div>
+			<h3>Falls 2</h3>
+			<p>Some more text</p>
+		</div>
+	</a>
+	<a class="lightbox" href="#story" id="img-mist">
+		<picture>
+			<img src="https://www.w3schools.com/w3images/mist.jpg">
+		</picture>
+		<div>
+			<h3>Mist</h3>
+			<p>Some more text</p>
+		</div>
+	</a>
+	<a class="lightbox" href="#story" id="img-rocks">
+		<picture>
+			<img src="https://www.w3schools.com/w3images/rocks.jpg">
+		</picture>
+		<div>
+			<h3>Rocks</h3>
+			<p>Some more text</p>
+		</div>
+	</a>
+	<a class="lightbox" href="#story" id="img-mountainskies">
+		<picture>
+			<img src="https://www.w3schools.com/w3images/mountainskies.jpg">
+		</picture>
+		<div>
+			<h3>Mountain skies</h3>
+			<p>Some more text</p>
+		</div>
+	</a>
+	<a class="lightbox" href="#story" id="img-nature">
+		<picture>
+			<img src="https://www.w3schools.com/w3images/nature.jpg">
+		</picture>
+		<div>
+			<h3>Nature</h3>
+			<p>Some more text</p>
+		</div>
+	</a>
+	<a class="lightbox" href="#story" id="img-ocean">
+		<picture>
+			<img src="https://www.w3schools.com/w3images/ocean.jpg">
+		</picture>
+		<div>
+			<h3>Ocean</h3>
+			<p>Some more text</p>
+		</div>
+	</a>
+	<a class="lightbox" href="#story" id="img-paris">
+		<picture>
+			<img src="https://www.w3schools.com/w3images/paris.jpg">
+		</picture>
+		<div>
+			<h3>Paris</h3>
+			<p>Some more text</p>
+		</div>
+	</a>
+	<a class="lightbox" href="#story" id="img-underwater">
+		<picture>
+			<img src="https://www.w3schools.com/w3images/underwater.jpg">
+		</picture>
+		<div>
+			<h3>Underwater</h3>
+			<p>Some more text</p>
+		</div>
+	</a>
+	<a class="lightbox" href="#story" id="img-wedding">
+		<picture>
+			<img src="https://www.w3schools.com/w3images/wedding.jpg">
+		</picture>
+		<div>
+			<h3>Wedding</h3>
+			<p>Some more text</p>
+		</div>
+	</a>
 </section>
 
 <section>
