Improve maps and text

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 
 <section class="intro-card">
 	<h1>Kateřina & Martin</h1>
+	<div style="font-style: italic;">vám s radostí oznamují</div>
+	<h2 style="text-transform: uppercase; letter-spacing: 0.6em;">budeme se brát</h2>
+	<h3>13. 4. 2024</h3>
 </section>
 
 <section id="story">
@@ -33,7 +36,8 @@
 		<a href="#img-wedding"><img src="https://www.w3schools.com/w3images/wedding.jpg"></a>
 	</div>
 
-<!-- 	<a class="lightbox" href="#story" id="img-panorama">
+	<!--
+	<a class="lightbox" href="#story" id="img-panorama">
 		<picture>
 			<img src="media/IMG_20221002_112532.jpg">
 		</picture>
@@ -41,7 +45,8 @@
 			<h3>Panorama</h3>
 			<p>One of our trips</p>
 		</div>
-	</a> -->
+	</a>
+	-->
 	<a class="lightbox" href="#story" id="img-falls2">
 		<picture>
 			<img src="https://www.w3schools.com/w3images/falls2.jpg">
@@ -125,7 +130,7 @@
 	</a>
 </section>
 
-<section>
+<section id="maps">
 	<h2>Obrad</h2>
 	<p>Obrad sa bude konať v Kostele Nejsvětější Trojice Hospitalu Kuks.</p>
 	<iframe
@@ -136,9 +141,6 @@
 		referrerpolicy="no-referrer-when-downgrade"
 	>
 	</iframe>
-</section>
-
-<section>
 	<h2>Hostina</h2>
 	<p>Hostina sa bude konať na Fare v Dubenci.</p>
 	<iframe
