Implement lightbox using javascript

--- a/index.html
+++ b/index.html
@@ -21,48 +21,11 @@
 	<p>Setkali sme se 20. 1. 2022 a od té doby jsme šťastni.</p>
 
 	<div class="gallery">
-		<a href="#img-innsbruck"><img src="media/innsbruck-400.webp"></a>
-		<a href="#img-oscadnica"><img src="media/oscadnica-400.webp"></a>
-		<a href="#img-rysy"><img src="media/rysy-400.webp"></a>
-		<a href="#img-corgitrek"><img src="media/corgitrek-400.webp"></a>
+		<img data-photo="innsbruck" src="media/innsbruck-400.webp">
+		<img data-photo="oscadnica" src="media/oscadnica-400.webp">
+		<img data-photo="rysy" src="media/rysy-400.webp">
+		<img data-photo="corgitrek" src="media/corgitrek-400.webp">
 	</div>
-
-	<a class="lightbox" href="#story" id="img-innsbruck">
-		<picture>
-			<img src="media/innsbruck-full.jpg">
-		</picture>
-		<div>
-			<h3>Innsbruck</h3>
-			<p>One of our trips</p>
-		</div>
-	</a>
-	<a class="lightbox" href="#story" id="img-oscadnica">
-		<picture>
-			<img src="media/oscadnica-full.jpg">
-		</picture>
-		<div>
-			<h3>Oscadnica</h3>
-			<p>Some more text</p>
-		</div>
-	</a>
-	<a class="lightbox" href="#story" id="img-rysy">
-		<picture>
-			<img src="media/rysy-full.jpg">
-		</picture>
-		<div>
-			<h3>Rysy</h3>
-			<p>Some more text</p>
-		</div>
-	</a>
-	<a class="lightbox" href="#story" id="img-corgitrek">
-		<picture>
-			<img src="media/corgitrek-full.jpg">
-		</picture>
-		<div>
-			<h3>Corgitrek</h3>
-			<p>Some more text</p>
-		</div>
-	</a>
 </section>
 
 <section id="info">
@@ -113,4 +76,7 @@
 	</div>
 </section>
 
+<div id="lightbox"></div>
+
+<script src="scripts.js"></script>
 </body>
