--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 
 <section id="intro-card">
 	<picture>
-		<source srcset="media/logo-w950.webp" width="950" height="1014" media="(min-width:701px)" type="image/webp">
-		<source srcset="media/logo-w700.webp" width="700" height="747" media="(min-width:531px)" type="image/webp">
-		<source srcset="media/logo-w530.webp" width="530" height="566" media="(min-width:401px)" type="image/webp">
+		<source srcset="media/logo-w950.webp" width="950" height="1014" media="screen and (min-width:701px)" type="image/webp">
+		<source srcset="media/logo-w700.webp" width="700" height="747" media="screen and (min-width:531px)" type="image/webp">
+		<source srcset="media/logo-w530.webp" width="530" height="566" media="screen and (min-width:401px)" type="image/webp">
 		<img src="media/logo-w400.webp" width="400" height="427">
 	</picture>
 	<span>se budou brát</span>
