Fix grammar and wording

--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
 		<img src="media/logo-w400.webp" width="400" height="427">
 	</picture>
 	<span>se budou brát</span>
-	<span class="date">13. 4. 2024</span>
+	<span class="date">13.4.2024</span>
 </section>
 
 <section id="story">
 	<h2>Náš příběh</h2>
-	<p>Setkali sme se 20. 1. 2022 a od té doby jsme šťastni.</p>
+	<p>Setkali jsme se 20.1.2022 a od té doby jsme šťastni.</p>
 
 	<div class="gallery">
 		<img data-photo="innsbruck" src="media/innsbruck-400.webp">
@@ -36,12 +36,12 @@
 <section id="info">
 	<div>
 		<h2>Informace</h2>
-		<p>Vše se nachází v okolí Dvoru Králové nad Labem, pro přesun ale doporučujeme mít auto. S parkováním by neměli být žádné potíže.</p>
+		<p>Vše se nachází v okolí Dvora Králové nad Labem, pro přesun ale doporučujeme mít auto. S parkováním by neměly být žádné obtíže.</p>
 	</div>
 
 	<div>
 		<h2>Obřad</h2>
-		<p>Obřad se bude konat v <a href="https://www.hospital-kuks.cz/cs/">hospitálu Kuks</a>, v klášterním kostele Nejsvětější Trojice. Parkovat lze u Hospody Na sýpce, která se nacházi hned vedle hospitálu. Pokud by u hospody již nebylo místo, ve vesničce Kuks je placené parkovište (60Kč na celý den) odkud se pěšky dostanete do hospitálu za přibližne 15 minut. Doporučujeme nechat si časovou rezervu, kterou pak můžete využít i na prohlídku dvora a zahrad hospitálu.</p>
+		<p>Obřad proběhne v <a href="https://www.hospital-kuks.cz/cs/">hospitálu Kuks</a>, v klášterním kostele Nejsvětější Trojice. Parkovat lze u Hospody Na sýpce, která se nacházi hned vedle hospitálu. Pokud by u hospody již nebylo místo, ve vesničce Kuks je placené parkovište (60Kč na celý den) odkud se pěšky dostanete do hospitálu za přibližne 15 minut. Doporučujeme nechat si časovou rezervu, kterou pak můžete využít i na prohlídku nádvoří a zahrad hospitálu.</p>
 		<iframe
 			src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3000.3468441189566!2d15.886894676999047!3d50.39749257158214!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x470e87b4607f9ad5%3A0x91204f8b0959ed39!2sHospit%C3%A1l%20Kuks!5e1!3m2!1ssk!2scz!4v1698733723482!5m2!1ssk!2scz"
 			style="border:0;"
@@ -54,7 +54,7 @@
 
 	<div>
 		<h2>Hostina</h2>
-		<p>Hostina se bude konat v <a href="https://penzionnafare.cz/">Penzionu na Faře</a> v Dubenci. Cesta z Kuksu trvá autem přibližne 20 minut. Pokud máte zájem o ubytování v penzionu, dejte nám vědet prostřednictvím dotazníku.</p>
+		<p>Následovat bude v <a href="https://penzionnafare.cz/">Penzionu na Faře</a> v Dubenci. Cesta z Kuksu do Dubence zabere autem přibližne 20 minut. Penzion nabízí možnost ubytování, pokud byste o něj měli zájem, dejte nám vědet prostřednictvím dotazníku. První noc je na nás. 😃</p>
 		<iframe
 			src="https://www.google.com/maps/embed?pb=!1m17!1m11!1m3!1d941.8263130377863!2d15.810408500252773!3d50.37158399924748!2m2!1f0!2f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x470e869fe6df3e4d%3A0xa9813d4b32b346bc!2sFara%20v%20Dubenci!5e1!3m2!1ssk!2scz!4v1698733648717!5m2!1ssk!2scz"
 			style="border:0;"
@@ -67,12 +67,12 @@
 
 	<div>
 		<h2>Program</h2>
-		<p>Obřad sa bude začínat v 14:00. Časový harmonogram hostiny a zábavy bude ješte upřesněn.</p>
+		<p>Obřad začne v 14:00. Časový harmonogram hostiny a zábavy bude ješte upřesněn.</p>
 		<!--
 		<ol>
 			<li>14:00 - obřad</li>
 			<li>15:00 - focení</li>
-			<li>15:30 - přesun do penziónu</li>
+			<li>15:30 - přesun do penzionu</li>
 			<li>16:00 - zahájení zábavy</li>
 			<li>18:00 - krájení dortu</li>
 			<li>19:00 - první tanec</li>
