Add nicer story and some tweaks

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Svadobný web</title>
+	<title>Svatba Kateřiny a Martina</title>
 	<link rel="stylesheet" type="text/css" media="screen" href="styles.css">
 	<link rel="icon" type="image/x-icon" href="media/favicon.ico">
 </head>
@@ -23,7 +23,7 @@
 
 <section id="story">
 	<h2>Náš příběh</h2>
-	<p>Setkali jsme se 20.1.2022 a od té doby jsme šťastni.</p>
+	<p>20. leden 2022. V restauraci Zlatý klas se chystal začít seznamovací pub quiz. <em>On</em> tam byl na pozvání organizátora-známého a <em>jí</em> se tam ani moc nechtělo. <em>Oba</em> ale přišli s velkým předstihem, a tak se spolu dali do řeči ještě před samotným kvízem. A protože to byla konverzace příjemná, rozhodli se sejít i další večer a potom znovu a znovu a pokud se nerozešli, tak jsou spolu dodnes.</p>
 
 	<div class="gallery">
 		<img data-photo="innsbruck" src="media/innsbruck-400.webp">
@@ -54,7 +54,7 @@
 
 	<div>
 		<h2>Hostina</h2>
-		<p>Následovat bude v <a href="https://penzionnafare.cz/">Penzionu na Faře</a> v Dubenci. Cesta z Kuksu do Dubence zabere autem přibližne 20 minut. Penzion nabízí možnost ubytování, pokud byste o něj měli zájem, dejte nám vědet prostřednictvím dotazníku. První noc je na nás. 😃</p>
+		<p>Následovat bude hostina a zábava v <a href="https://penzionnafare.cz/">Penzionu na Faře</a> v Dubenci. Cesta z Kuksu do Dubence zabere autem přibližne 20 minut. Penzion nabízí možnost ubytování, pokud byste o něj měli zájem, dejte nám vědet prostřednictvím dotazníku. První noc je na nás! 😃</p>
 		<iframe
 			src="https://www.google.com/maps/embed?pb=!1m17!1m11!1m3!1d941.8263130377863!2d15.810408500252773!3d50.37158399924748!2m2!1f0!2f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x470e869fe6df3e4d%3A0xa9813d4b32b346bc!2sFara%20v%20Dubenci!5e1!3m2!1ssk!2scz!4v1698733648717!5m2!1ssk!2scz"
 			style="border:0;"
