Add form status indicator as a form of feedback about submission

--- a/index.html
+++ b/index.html
@@ -139,6 +139,8 @@
 		</label>
 
 		<input type="submit" value="Odeslat" class="form-col-both">
+
+		<span id="form-status" class="form-col-both bi hidden bi-circle"></span>
 	</form>
 </section>
 
